# ElectroBard

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  README.md  compose.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline_user.py  0002_m1_sound_tag.py
backend/app/: db.py  deps.py  main.py  settings.py
backend/app/models/: __init__.py  base.py  sound.py  tag.py  user.py
backend/app/routers/: __init__.py  sounds.py
backend/app/schemas/: __init__.py  sound.py
backend/app/storage/: __init__.py  base.py  deps.py  local.py
backend/scripts/: __init__.py  export_openapi.py
backend/tests/: conftest.py  fakes.py  test_health.py  test_migrations.py  test_settings.py  test_sound_model.py  test_sounds.py  test_storage.py  test_user_model.py
docs/: api-contract.md  data-model.md  dev-setup.md  requirements.md  risks.md  roadmap.md  tech-stack.md  vision.md
docs/adr/: 0001-client-side-audio.md  0002-multitenant-model-deferred-auth.md  0003-single-controller-passive-listeners.md  0004-same-origin-api-proxy.md  0005-youtube-keyless-oembed-ingestion.md  0006-file-duration-mutagen.md  0007-audiosourceplayer-unified-status-seam.md
docs/agents/: issue-tracker.md
docs/prd/: 01-sound-library.md  02-layers.md  03-sets.md  (+1 more)
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
(+20 files in other folders)
